--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
+    <title>Home</title>
     <link rel="stylesheet" href="/css/layout.css">
+<%- style %>
 </head>
 <body>
 
@@ -15,7 +16,7 @@
   
 
    <%- include('_footer') %>
-
+ <%- script %>
 </body>
 
 </html>
